# audio_cryptograph

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/configs/: logging.toml  settings.toml
src/cryptographer/: application.py
src/cryptographer/controller/: audio_controller.py
src/cryptographer/helper/: __init__.py  aes.py  clm.py  collatz.py  key.py  shuffle.py
src/cryptographer/model/: audio_model.py
src/test/: __init__.py  plot.py  prepare_binary_nist.py  tests.py
src/util/: __init__.py  config_parser.py  funcs.py  log_config_parser.py  path_reslover.py
